# kubuntu-debug-installer

./: .gitignore  CMakeLists.txt  Messages.sh
autotests/: CMakeLists.txt  findertest.cpp
debian/: changelog  control  copyright  kubuntu-debug-installer.links  kubuntu-debug-installer.lintian-overrides  rules
src/: CMakeLists.txt  DebugFinder.cpp  DebugFinder.h  DebugInstaller.cpp  DebugInstaller.h  Messages.sh  Version.h.cmake  dbginstaller.cpp  dbginstaller.h  dbginstaller.ui  dbglookupthread.cpp  dbglookupthread.h  installdbgsymbols.desktop  main.cpp  version.h.cmake  version.sh
